--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 title: AA's Blog
 SEOTitle: 李AA的博客 | AA's Blog
 header-img: img/home-bg.jpg
-email: huxpro@gmail.com
-description: "关于游戏音频程序与设计、音频软件开发 | 李AA，Game Audio Programmer & Software Developer
+email: lycindie4@gmail.com
+description: "关于游戏音频程序与设计、音频软件开发 | 李AA，Game Audio Programmer & Software Developer"
 keyword: "李AA, Game Audio, Audio Software, Wwise, Unreal, Fmod, Unity, Super Collider, Max/Msp, Reaper"
 url: "https://jazzlost.github.io/"              # your host, for absolute URL
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
