--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ future: true
 # SNS settings
 RSS: false
 #weibo_username:     huxpro
-zhihu_username:     李昱宸
+zhihu_username:     li-yu-chen
 github_username:    jazzlost
 #twitter_username:   huxpro
 #facebook_username:  huxpro
