--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: AA's Blog
 SEOTitle: 李AA的博客 | AA's Blog
-header-img: img/eT3swTx.jpg
+header-img: img/blog-theme.jpg
 email: lycindie4@gmail.com
 description: "关于游戏音频程序与设计、音频软件开发 | 李AA，Game Audio Programmer & Software Developer"
 keyword: "李AA, Game Audio, Audio Software, Wwise, Unreal, Fmod, Unity, Super Collider, Max/Msp, Reaper"
@@ -79,7 +79,7 @@ ga_domain: huangxuan.me
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "Null"
-sidebar-avatar: /img/maxresdefault_live.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/blog-head.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
@@ -102,38 +102,14 @@ page-mathjax: false
 
 # Friends
 friends: [
-    {
+    #{
     #     title: "Su",
     #     href: "http://su.gallery/"
     # },{
-        title: "乱序",
-        href: "http://mida.re/"
-    },{
-        title: "前端外刊评论",
-        href: "http://qianduan.guru/"
-    },{
-        title: "天镶的博客",
-        href: "http://lingyu.wang/"
-    },{
-        title: "Luke 的自留地",
-        href: "http://hmqk1995.github.io"
-    },{
-        title: "Ebn's Blog",
-        href: "http://ebnbin.com/"
-    },{
-        title: "SmdCn's Blog",
-        href: "http://blog.smdcn.net"
-    },{
-        title: "David's Game",
-        href: "https://www.ruoyaowu.com/"
-    },{
-        title: "DHong Say",
-        href: "http://dhong.co"
-    },{
-        title: "尹峰以为",
-        href: "http://ingf.github.io/"
-    },{
-        title: "解旻的博客",
-        href: "http://xieminis.me/"
-    }
+        #title: "乱序",
+        #href: "http://mida.re/"
+    #},{
+        #title: "前端外刊评论",
+        #href: "http://qianduan.guru/"
+    #}
 ]
