--- a/_config.yml
+++ b/_config.yml
@@ -78,8 +78,8 @@ ga_domain: auto
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "游戏音频程序，音频设计与开发 | 李AA，Game Audio Programmer & Audio Software Developer & Audio Designer"
-sidebar-avatar: /img/blog-head.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-about-description: "游戏音频程序，音频设计与开发 <br> 李AA，Game Audio Programmer & Audio Software Developer & Audio Designer"
+sidebar-avatar: "/img/blog-head.jpg"     # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
